--- a/package.json
+++ b/package.json
@@ -8,8 +8,22 @@
     "start": "next start"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "next": "^9.3.3",
     "react": "^16.13.0",
     "react-dom": "^16.13.0"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/zeit/next.js/tree/canary/packages/create-next-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/thiti27/backend.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/thiti27/backend/issues"
+  },
+  "homepage": "https://github.com/thiti27/backend#readme"
 }
